# devtools

./: .gitignore  readme.md
.github/workflows/: OnRelease.yml
builder-tool/: pack.py  pyproject.toml  readme.md  requirements.txt
builder-tool/src/: __init__.py  builder-tool.py  builderTool.py  main.py  virtualEnv.py
create-module/: action.yml  main.py  pack.py  pyproject.toml  requirements.txt
create-module/src/: __init__.py  __main__.py  createModule.py  customTypes.py  main.py  utils.py
test-report-assembler/: action.yml  main.py  requirements.txt
test-reports-publisher/: action.yml  api.py  decodeSensitive.py  main.py  printer.py  requirements.txt
tests-exporter/: action.yml  dataTypes.py  main.py  output.json  report.json  requirements.txt  runOnSave.py  utils.py
tests-exporter/resources/: details.template.html  footer.template.html  header.template.html  main.template.html  mainInfo.template.html  mainPage.template.html  summary.template.html
tests-exporter/resources/common/: bars.template.html  footer.template.html  header.template.html  main.template.html  pie.template.html  platformBadge.template.html  statsList.template.html  statusBadge.template.html
tests-exporter/resources/index/: details.template.html  info.template.html  platformListElement.template.html
tests-exporter/resources/specslist/: page.template.html  spec.template.html
tests-exporter/resources/suite/: info.template.html  page.template.html  spec.template.html  stack.template.html
tests-exporter/resources/suites/: details.template.html  info.template.html  (+2 more)
(+4 files in other folders)
