[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "build-tool"
version = "{version}"
authors = [
  { name="Antoine Buirey", email="antoine.buirey@gmail.com" }
]
description = "A simple build tool for projects"
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]